feat: add some feature

--- a/aiueo.org
+++ b/aiueo.org
@@ -1,12 +1,37 @@
 aiueo
 aiueo
 aiueo
-<<<<<<< HEAD
-aiueo -yuto
-
-aiooioioioio -yoshiteru
-
-aiaiai -yuto
-=======
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
+aiueo
 aiueo -taiki
->>>>>>> 701bc60e0f6da4e68eb3efe8fea065d637c22b49
